Fix arrows on product page- adjusted z-index

--- a/etsy_clone/app/assets/stylesheets/navbar/popup.css
+++ b/etsy_clone/app/assets/stylesheets/navbar/popup.css
@@ -15,7 +15,7 @@
   border-radius: 3px;
   margin: auto;
   background-color: #FFFFFF;
-  z-index: 4;
+  z-index: 5;
   padding: 20px;
 }
 
@@ -40,7 +40,7 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 3;
+  z-index: 4;
 }
 
 .hide-popup-overlay {
